@@ -1,4 +1,10 @@
-﻿zg 11.04.2014 16:02:53 +0200 - build 3861
+﻿drkns 12.04.2014 13:29:05 +0200 - build 3862
+
+1. 0002645: Повторный поиск (ShiftF7) работает неправильно с опцией "Cursor at end"
+
+2. 0002646: Повторный поиск (ShiftF7), если ничего не найдено, сдвигает курсор
+
+zg 11.04.2014 16:02:53 +0200 - build 3861
 
 1. gcc warnings.
 
